feat: add per-beat rhythm editor and simplify metronome controls